--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav class="navbar">
     <a href="index.html" class="logo">LagKing Studio</a>
     <ul class="nav-links">
-      <li><a href="Index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="privacy policy.html">Privacy Policy</a></li>
     </ul>
   </nav>
